[package]
name = "nih_log"
version = "0.2.0"
edition = "2021"
authors = ["Robbert van der Helm <mail@robbertvanderhelm.nl>"]
license = "ISC"

description = "An opinionated yet flexible logger catering to the needs of the NIH-plug plugin framework"
repository = "https://github.com/robbert-vdh/nih-log"
keywords = ["log", "logging", "nih-plug"]

[dependencies]
atty = "0.2.14"
log = "0.4.17"
once_cell = "1.17.1"
termcolor = "1.2.0"
time = { version = "0.3.20", features = ["formatting", "local-offset", "macros"] }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.44"
features = [
  "Win32_Foundation",
  "Win32_System_Diagnostics_Debug",
]
